# maze-solver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
common/: globals.h
include/: algorithms.h  cell.h  maze_controller.h  maze_generator.h  ui_controller.h
src/: algorithms.cpp  app.cpp  cell.cpp  maze_controller.cpp  maze_creator.cpp  maze_generator.cpp  ui_controller.cpp
test/: test_test.cpp
